# star-spreader

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: README_END_TO_END.md  end_to_end_example.py  schema_tree_example.py
src/star_spreader/: __init__.py  cli.py  config.py
src/star_spreader/generator/: __init__.py  sql.py  sql_schema_tree.py
src/star_spreader/schema/: DATABRICKS.md  __init__.py  base.py  databricks.py
src/star_spreader/schema_tree/: __init__.py  builder.py  nodes.py  visitor.py
src/star_spreader/validator/: __init__.py  explain.py
tests/: README.md  __init__.py  test_integration.py  test_sql_generator.py
tests/functional/: FUNCTIONAL_TESTS.md  __init__.py  test_functional.py
tests/unit/: test_databricks_schema.py  test_schema_tree.py  test_sql_generation.py
